crates/pcb-diode-api/src/snapshots/pcb_diode_api__component__tests__embed_step_in_footprint_basic.snap
---
source: crates/pcb-diode-api/src/component.rs
expression: result
---
(footprint "Test"
	(layer "F.Cu")
	(pad "1" smd rect
		(at 0 0)
		(size 1 1)
		(layers "F.Cu")
	)
	(embedded_files
		(file
			(name "test.step")
			(type model)
			(data |KLUv/SAOcQAAU1RFUCBEQVRBIEhFUkU=|)
			(checksum "0FC02384A29118F69FFB8F37551022E3")
		)
	)
	(model "kicad-embed://test.step"
		(offset
			(xyz 0 0 0)
		)
		(scale
			(xyz 1 1 1)
		)
		(rotate
			(xyz 0 0 0)
		)
	)
)
