crates/pcb-diode-api/src/snapshots/pcb_diode_api__component__tests__embed_step_in_footprint_preserves_transforms.snap
---
source: crates/pcb-diode-api/src/component.rs
expression: result
---
(footprint "Test"
	(layer "F.Cu")
	(pad "1" smd rect
		(at 0 0)
		(size 1 1)
		(layers "F.Cu")
	)
	(embedded_files
		(file
			(name "new.step")
			(type model)
			(data |KLUv/SANaQAATkVXIFNURVAgREFUQQ==|)
			(checksum "0FC02384A29118F69FFB8F37551022E3")
		)
	)
	(model "kicad-embed://new.step"
		(offset
			(xyz 1 2 3)
		)
		(scale
			(xyz 2 2 2)
		)
		(rotate
			(xyz 45 90 180)
		)
	)
)
